fix gap

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin-top: 70px;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  grid-gap: 10px;
+  grid-gap: 30px;
   margin-left: 30px;
   margin-right: 30px;
 }
